# Glide

./: Makefile.am  configure.ac
data/: Makefile.am  glide-mime.xml  glide.desktop.in.in
data/icons/: Makefile.am
data/icons/hicolor/scalable/apps/: Makefile.am
data/ui/: Makefile.am  glide-window.ui
po/: Makefile  Makefile.in
src/: Makefile.am  glide-actor-priv.h  glide-actor.c  glide-actor.h  glide-animations.c  glide-animations.h  glide-debug.h  glide-dirs.c  glide-dirs.h  glide-document-priv.h  glide-document.c  glide-document.h  glide-gtk-util.c  glide-gtk-util.h  glide-image-priv.h  glide-image.c  glide-image.h  glide-json-util.c  glide-json-util.h  glide-manipulator-priv.h  glide-manipulator.c  glide-manipulator.h  glide-rectangle.c  glide-rectangle.h  glide-slide-priv.h  glide-slide.c  glide-slide.h  glide-stage-manager-priv.h  glide-stage-manager.c  glide-stage-manager.h  glide-text.c  glide-text.h  glide-types.h  glide-undo-manager-priv.h  glide-undo-manager.c  glide-undo-manager.h  glide-window-private.h  glide-window.c  glide-window.h  glide-window.ui  (+1 more)
